--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-
-    <title>React test for DLatam</title>
+    <link rel="icon" href="./Logo/Logo.svg" type="image/x-icon" />
+    <title>React test for D.Latam</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
